Grease Pencil - Frames.new() doesn't create frame if frame_number <= 0 #36859

Closed
opened 2013-09-29 18:38:59 +02:00 by CodeManX · 3 comments
Member

%%%--- Operating System, Graphics card ---
Win 7

- Blender version with error, and version that worked ---

2.69 testbuild 1

- Short description of error ---

D.grease_pencil['GPencil'].layers['GP_Layer'].frames.new(0) # nothing
D.grease_pencil['GPencil'].layers['GP_Layer'].frames.new(-1) # nothing
D.grease_pencil['GPencil'].layers['GP_Layer'].frames.new(1) # frame created

bpy.data.grease_pencil['GPencil']...GPencilFrame

Although:
ValueError: GPencilFrames.new(): error with argument 1, "frame_number" - Function.frame_number value not in 'int' range ((-2147483647 - 1), 2147483647)

Workaround?
f = D.grease_pencil['GPencil'].layers['GP_Layer'].frames.new(1)
f.frame_number = 0

Changing the frame_number afterwards doesn't seem to care about frames with the same frame_number, Frames.new() does however??

RuntimeError: Error: Frame already exists on this frame number 1

BTW: the eraser is kinda confusing for long line strokes, as you need to touch either of the end points. In some situations, they could be off-screen and user wonders why the stroke doesn't vanish as he/she moves the eraser circle over the line...%%%

%%%--- Operating System, Graphics card --- Win 7 - Blender version with error, and version that worked --- 2.69 testbuild 1 - Short description of error --- >>> D.grease_pencil['GPencil'].layers['GP_Layer'].frames.new(0) # nothing >>> D.grease_pencil['GPencil'].layers['GP_Layer'].frames.new(-1) # nothing >>> D.grease_pencil['GPencil'].layers['GP_Layer'].frames.new(1) # frame created bpy.data.grease_pencil['GPencil']...GPencilFrame Although: ValueError: GPencilFrames.new(): error with argument 1, "frame_number" - Function.frame_number value not in 'int' range ((-2147483647 - 1), 2147483647) Workaround? f = D.grease_pencil['GPencil'].layers['GP_Layer'].frames.new(1) f.frame_number = 0 Changing the frame_number afterwards doesn't seem to care about frames with the same frame_number, Frames.new() does however?? RuntimeError: Error: Frame already exists on this frame number 1 BTW: the eraser is kinda confusing for long line strokes, as you need to touch either of the end points. In some situations, they could be off-screen and user wonders why the stroke doesn't vanish as he/she moves the eraser circle over the line...%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r60426, thanks for the report!%%%

%%%Fixed in r60426, thanks for the report!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#36859
No description provided.