Fix [#36859] Grease Pencil - Frames.new() doesn't create frame if frame_number <= 0

Related to [#36831] (r60412), RNA was still forbidding negative frame numbers...